fix overflowing height due to grid

--- a/src/sass/blocks/main.scss
+++ b/src/sass/blocks/main.scss
@@ -1,6 +1,5 @@
 .main {
   grid-column: 2/3;
-  grid-row: 1/3;
 
   box-sizing: content-box;
   max-inline-size: 33.75rem;
