--- a/src/sass/compositions/u-grid.scss
+++ b/src/sass/compositions/u-grid.scss
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 1fr Min(33.75rem, 100%) 1fr;
 
-  grid-template-rows: 1fr 1fr;
   align-items: center;
   padding-inline: 16px;
 }
